[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Player/Male_Spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Images/Characters/player.png" type="Texture" id=2]
[ext_resource path="res://Scenes/BattleScene.gd" type="Script" id=3]
[ext_resource path="res://Scenes/PoliticalCompass.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0117647, 0.027451, 0.266667, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.709804, 0.776471, 0, 1 )

[node name="BattleScene" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 192.0
color = Color( 0.027451, 0.360784, 0.45098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerSprite" type="Sprite" parent="."]
position = Vector2( 32, 32 )
scale = Vector2( 0.144, 0.136 )
texture = ExtResource( 2 )
centered = false
hframes = 4
vframes = 4
frame = 5

[node name="EnemySprite" type="Sprite" parent="."]
position = Vector2( 240, 16 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( 0, 3 )
hframes = 3
vframes = 3
frame = 7

[node name="LifeBars" type="Node2D" parent="."]

[node name="PlayerBar" type="ProgressBar" parent="LifeBars"]
margin_right = 100.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 15 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.168627, 0.85098, 0.223529, 1 )
value = 100.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPCBar" type="ProgressBar" parent="LifeBars"]
margin_left = 220.0
margin_right = 320.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 15 )
value = 100.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleMenu" type="Node2D" parent="."]

[node name="Container" type="ColorRect" parent="BattleMenu"]
margin_left = 16.0
margin_top = 96.0
margin_right = 304.0
margin_bottom = 176.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="BattleMenu"]
position = Vector2( 29, 97 )

[node name="ColorRect" type="ColorRect" parent="BattleMenu/Node2D"]
margin_right = 30.0
margin_bottom = 30.0
color = Color( 0.992157, 0.0313726, 0.0313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slogans" type="Node2D" parent="BattleMenu"]

[node name="PoliticalCompass" parent="." instance=ExtResource( 4 )]
position = Vector2( 160, 48 )

[node name="ActionLog" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="ActionLog"]
visible = false
anchor_left = 0.05
anchor_top = 0.533
anchor_right = 0.95
anchor_bottom = 0.978
margin_top = 0.0599899
margin_bottom = -0.0400085
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="ActionLog/MarginContainer"]
margin_right = 288.0
margin_bottom = 79.0
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="ActionLog/MarginContainer/Panel"]
margin_left = 16.0
margin_top = 16.0
margin_right = 272.0
margin_bottom = 48.0
text = "Lorem Ipsum"
valign = 3
max_lines_visible = 0
__meta__ = {
"_edit_use_anchors_": false
}
